@@ -609,89 +609,82 @@ static double *GenerateCoefficients(const Image *image,
     }
     case RigidAffineDistortion:
     {
-      /* RigidAffine Distortion
+      double
+        inverse[6],
+        **matrix,
+        *vectors[1],
+        terms[5];
+
+      MagickBooleanType
+        status;
+
+      /*
+        Rigid affine (also known as a Euclidean transform), restricts affine
+        coefficients to 4 (S, R, Tx, Ty) with Sy=Sx and Ry = -Rx so that one has
+        only scale, rotation and translation. No skew.
       */
-      if ( number_arguments%cp_size != 0 ||
-           number_arguments < cp_size ) {
-        (void) ThrowMagickException(exception,GetMagickModule(),OptionError,
-               "InvalidArgument", "%s : 'require at least %.20g CPs'",
-               "Affine", 1.0);
-        coeff=(double *) RelinquishMagickMemory(coeff);
-        return((double *) NULL);
-      }
-      /* handle special cases of not enough arguments */
-      if ( number_arguments == cp_size ) {
-        /* Only 1 CP Set Given */
-        if ( cp_values == 0 ) {
-          /* image distortion - translate the image */
-          coeff[0] = 1.0;
-          coeff[2] = arguments[0] - arguments[2];
-          coeff[4] = 1.0;
-          coeff[5] = arguments[1] - arguments[3];
-        }
-        else {
-          /* sparse gradient - use the values directly */
-          for (i=0; i<number_values; i++)
-            coeff[i*3+2] = arguments[cp_values+i];
-        }
-      }
-      else {
-        /* 2 or more points (usally 3) given.
-           Solve a least squares simultaneous equation for coefficients.
-        */
-        double
-          **matrix,
-          **vectors,
-          terms[2];
-
-        MagickBooleanType
-          status;
-
-        /* create matrix, and a fake vectors matrix */
-        matrix = AcquireMagickMatrix(2UL,2UL);
-        vectors = (double **) AcquireQuantumMemory(number_values,
-          sizeof(*vectors));
-        if (matrix == (double **) NULL || vectors == (double **) NULL)
+      if (((number_arguments % cp_size) != 0) || (number_arguments < cp_size))
         {
-          matrix  = RelinquishMagickMatrix(matrix, 2UL);
-          vectors = (double **) RelinquishMagickMemory(vectors);
-          coeff   = (double *) RelinquishMagickMemory(coeff);
-          (void) ThrowMagickException(exception,GetMagickModule(),
-                  ResourceLimitError,"MemoryAllocationFailed",
-                  "%s", "DistortCoefficients");
-          return((double *) NULL);
-        }
-        /* fake a number_values x2 vectors matrix from coefficients array */
-        for (i=0; i < number_values; i++)
-          vectors[i] = &(coeff[i*2]);
-        /* Add given control point pairs for least squares solving */
-        for (i=0; i < number_arguments; i+=cp_size) {
-          terms[0] = arguments[i+cp_x];  /* x */
-          terms[1] = arguments[i+cp_y];  /* y */
-          LeastSquaresAddTerms(matrix,vectors,terms,
-            &(arguments[i+cp_values]),2UL,number_values);
-        }
-        /* Solve for LeastSquares Coefficients */
-        status=GaussJordanElimination(matrix,vectors,2UL,number_values);
-        matrix = RelinquishMagickMatrix(matrix, 2UL);
-        vectors = (double **) RelinquishMagickMemory(vectors);
-        if ( status == MagickFalse ) {
-          coeff = (double *) RelinquishMagickMemory(coeff);
           (void) ThrowMagickException(exception,GetMagickModule(),OptionError,
-              "InvalidArgument","%s : 'Unsolvable Matrix'",
-              CommandOptionToMnemonic(MagickDistortOptions, *method) );
+            "InvalidArgument", "%s : 'require at least %.20g CPs'",
+            CommandOptionToMnemonic(MagickDistortOptions,*method),2.0);
+          coeff=(double *) RelinquishMagickMemory(coeff);
           return((double *) NULL);
         }
-        (void) fprintf(stderr,"rigid: %g %g %g %g\n",coeff[0],coeff[1],coeff[2],
-          coeff[3]);
-        coeff[5]=coeff[3];
-        coeff[4]=coeff[2];
-        coeff[3]=coeff[0];
-        coeff[2]=(-coeff[1]);
-        (void) fprintf(stderr,"affine: %g %g %g %g %g %g\n",coeff[0],coeff[1],
-          coeff[2],coeff[3],coeff[4],coeff[5]);
+      /*
+        Rigid affine requires a 4x4 least-squares matrix (zeroed).
+      */
+      matrix=AcquireMagickMatrix(4UL,4UL);
+      if (matrix == (double **) NULL)
+        {
+          coeff=(double *) RelinquishMagickMemory(coeff);
+          (void) ThrowMagickException(exception,GetMagickModule(),
+            ResourceLimitError,"MemoryAllocationFailed","%s",
+            CommandOptionToMnemonic(MagickDistortOptions,*method));
+          return((double *) NULL);
+        }
+      /*
+        Add control points for least squares solving.
+      */
+      vectors[0]=(&(coeff[0]));
+      for (i=0; i < number_arguments; i+=4)
+      {
+        terms[0]=arguments[i+0];
+        terms[1]=(-arguments[i+1]);
+        terms[2]=1.0;
+        terms[3]=0.0;
+        LeastSquaresAddTerms(matrix,vectors,terms,&(arguments[i+2]),4UL,1UL);
+        terms[0]=arguments[i+1];
+        terms[1]=arguments[i+0];
+        terms[2]=0.0;
+        terms[3]=1.0;
+        LeastSquaresAddTerms(matrix,vectors,terms,&(arguments[i+3]),4UL,1UL);
       }
-      *method = AffineDistortion;
+      /*
+        Solve for least-squares coefficients.
+      */
+      status=GaussJordanElimination(matrix,vectors,4UL,1UL);
+      matrix=RelinquishMagickMatrix(matrix,4UL);
+      if (status == MagickFalse)
+        {
+          coeff=(double *) RelinquishMagickMemory(coeff);
+          (void) ThrowMagickException(exception,GetMagickModule(),OptionError,
+            "InvalidArgument","%s : 'Unsolvable Matrix'",
+            CommandOptionToMnemonic(MagickDistortOptions,*method));
+          return((double *) NULL);
+        }
+      /*
+        Convert (S, R, Tx, Ty) to an affine projection.
+      */
+      inverse[0]=coeff[0];
+      inverse[1]=coeff[1];
+      inverse[2]=(-coeff[1]);
+      inverse[3]=coeff[0];
+      inverse[4]=coeff[2];
+      inverse[5]=coeff[3];
+      AffineArgsToCoefficients(inverse);
+      InvertAffineCoefficients(inverse,coeff);
+      *method=AffineDistortion;
       return(coeff);
     }
     case AffineProjectionDistortion:
